# referee

./: cabal.project  referee.cabal  stack.yaml
src/: Referee.hs
src/Referee/: Dnf.hs  Lang.hs  Parser.hs  Spec.hs  Types.hs
src/Referee/Spec/: Dnf.hs  Parser.hs
